@@ -1,3 +1,12 @@
+1999-11-03  Michael Fulbright  <msf@redhat.com>
+
+	* src/io-jpeg.c (image_load_increment): Further removal of
+	bugginess in local buffering code. Handles grayscale jpegs
+	correctly now.
+
+	* src/io-jpeg.c (image_load_stop): Was freeing local context
+	for jpeg library before calling jpeg_decompres_finish ().
+
 1999-11-03  Jonathan Blandford  <jrb@redhat.com>
 
 	* src/io-gif.c (image_load_increment): now handle arbitrary buffer
@@ -45,7 +54,7 @@
 
 1999-11-03  Michael Fulbright  <drmike@redhat.com>
 
-	* src/io-jpg.c image_load_increment(): Fixed code which moved
+	* src/io-jpg.c (image_load_increment): Fixed code which moved
 	buffer around as new data comes in to work properly. JPEG progressive
 	loading should be working now except for grayscale JPEG's, which I
 	will look into next.
